# qmc

./: .gitignore  CMakeLists.txt  README.md  find_dt_max.py  plot_descendants.py  plot_energy.py  plot_walkers.py  qmc.sh  run_sweep.py
configs/: exciton_exciton.json  exciton_exciton_non_interact.json  exciton_in_a_square_potential.json  exciton_in_a_triangle_potential.json  twisted_heterobilayer_exciton.json  twisted_heterobilayer_exciton_non_interact.json
include/: config.h  constants.h  dmc.h  hamiltonian.h  optimizer.h  periodic_boundary.h  qmc.h  system_config.h  utils.h  vmc.h  wavefunction.h
include/hamiltonians/: coulomb_hamiltonian.h  efficient_rk_hamiltonian.h  exciton_exciton_coulomb_hamiltonian.h  exciton_exciton_non_interact_hamiltonian.h  exciton_triangle_hamiltonian.h  hamiltonian_pool.h  heterobilayer_hamiltonian.h  square_hamiltonian.h  twisted_heterobilayer_hamiltonian.h
include/wavefunctions/: bilayer_exciton_wf.h  exciton_exciton_non_interact_wf.h  exciton_exciton_wf.h  exciton_in_a_square_potential_wf.h  exciton_in_a_triangle_potential_wf.h  helium_wf.h  hydrogen_wf.h  monolayer_biexciton_wf.h  monolayer_exciton_wf.h  monolayer_trion_wf.h  twisted_bilayer_exciton_gaussian_wf.h  twisted_bilayer_exciton_wf.h  wavefunction_pool.h
include/wavefunctions/hydrogen/: hydrogen_wf.h
results/helium/: 0_001.txt  0_005.txt  0_01.txt  0_05.txt  0_1.txt
src/: dmc.cpp  hamiltonian.cpp  main.cpp  periodic_boundary.cpp  qmc.cpp  utils.cpp  vmc.cpp  wavefunction.cpp
